@@ -1,5 +1,13 @@
 package com.xiilab.modulek8s.storage.volume.repository;
 
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Map;
+import java.util.function.Supplier;
+import java.util.stream.Collectors;
+
+import org.springframework.stereotype.Repository;
+
 import com.xiilab.modulek8s.common.enumeration.AnnotationField;
 import com.xiilab.modulek8s.common.enumeration.LabelField;
 import com.xiilab.modulek8s.common.enumeration.ResourceType;
@@ -13,6 +21,7 @@ import com.xiilab.modulek8s.storage.volume.dto.response.VolumeResDTO;
 import com.xiilab.modulek8s.storage.volume.dto.response.VolumeWithStorageResDTO;
 import com.xiilab.modulek8s.storage.volume.dto.response.VolumeWithWorkloadsResDTO;
 import com.xiilab.modulek8s.storage.volume.vo.VolumeVO;
+
 import io.fabric8.kubernetes.api.model.HasMetadata;
 import io.fabric8.kubernetes.api.model.PersistentVolumeClaim;
 import io.fabric8.kubernetes.api.model.PersistentVolumeClaimBuilder;
@@ -23,13 +32,6 @@ import io.fabric8.kubernetes.client.KubernetesClient;
 import io.fabric8.kubernetes.client.dsl.Resource;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.stereotype.Repository;
-
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Map;
-import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Repository
@@ -37,155 +39,37 @@ import java.util.stream.Collectors;
 public class VolumeRepositoryImpl implements VolumeRepository {
 	private final K8sAdapter k8sAdapter;
 
-    /**
-     * 유저가 설정한 스토리지 이름 조회
-     *
-     * @param client
-     * @param storageMetaName
-     * @return
-     */
-    private static String getStorageClassName(KubernetesClient client, String storageMetaName) {
-        return client.storage()
-                .v1()
-                .storageClasses()
-                .withName(storageMetaName)
-                .get()
-                .getMetadata()
-                .getAnnotations()
-                .get(AnnotationField.NAME.getField());
-    }
+	/**
+	 * 유저가 설정한 스토리지 이름 조회
+	 *
+	 * @param client
+	 * @param storageMetaName
+	 * @return
+	 */
+	private static String getStorageClassName(KubernetesClient client, String storageMetaName) {
+		return client.storage()
+			.v1()
+			.storageClasses()
+			.withName(storageMetaName)
+			.get()
+			.getMetadata()
+			.getAnnotations()
+			.get(AnnotationField.NAME.getField());
+	}
 
-    /**
-     * 볼륨 전체 리스트 조회
-     *
-     * @param client
-     * @return
-     */
-    private static List<PersistentVolumeClaim> getAllVolumes(KubernetesClient client) {
-        return client.persistentVolumeClaims()
-                .inAnyNamespace()
-                .withLabel(LabelField.CONTROL_BY.getField(), "astra")
-                .list()
-                .getItems();
-    }
-
-    private static PersistentVolumeClaim findPVCByMetaName(String volumeMetaName,
-                                                           List<PersistentVolumeClaim> pvcs) {
-        return pvcs.stream()
-                .filter(pvc -> pvc.getMetadata().getName().equals(volumeMetaName))
-                .findFirst()
-                .orElseThrow(() -> new RuntimeException("볼륨이 존재하지 않습니다."));
-    }
-
-    private static String getStorageSavePath(KubernetesClient client, String storageName) {
-        return client.storage().v1().storageClasses().withName(storageName).get().getParameters().get("share");
-    }
-
-    private static String getStorageClassName(PersistentVolumeClaim persistentVolumeClaim) {
-        return persistentVolumeClaim.getSpec().getStorageClassName();
-    }
-
-    private static StorageType getStorageType(PersistentVolumeClaim persistentVolumeClaim) {
-        return StorageType.valueOf(
-                persistentVolumeClaim.getMetadata().getLabels().get(LabelField.STORAGE_TYPE.getField()));
-    }
-
-    private static String getRequestVolume(PersistentVolumeClaim persistentVolumeClaim) {
-        return persistentVolumeClaim.getSpec().getResources().getRequests().get("storage").toString();
-    }
-
-    private static String getNamespace(PersistentVolumeClaim persistentVolumeClaim) {
-        return persistentVolumeClaim.getMetadata().getNamespace();
-    }
-
-    /**
-     * 아스트라를 통해 만들어진 PVC가 맞는지 체크
-     *
-     * @param pvc
-     * @return
-     */
-    private static boolean isVolumePVC(PersistentVolumeClaim pvc) {
-        return pvc.getMetadata().getName().contains(ResourceType.VOLUME.getName());
-    }
-
-    /**
-     * 워크스페이스 메타 이름으로 워크스페이스 사용자가 설정한 이름 조회
-     *
-     * @param client
-     * @param namespace
-     * @return
-     */
-    private static String getWorkspaceNameByMetaName(KubernetesClient client, String namespace) {
-        return client.namespaces()
-                .withName(namespace)
-                .get()
-                .getMetadata()
-                .getAnnotations()
-                .get(AnnotationField.NAME.getField());
-    }
-
-    /**
-     * 해당 볼륨을 사용중인 job list 조회
-     *
-     * @param volumeMetaName
-     * @param client
-     * @return
-     */
-    private static List<Job> getJobsInUseVolume(String volumeMetaName, KubernetesClient client) {
-        return client.batch().v1().jobs().withLabelIn(volumeMetaName, "true")
-                .list()
-                .getItems();
-    }
-
-    /**
-     * 해당 볼륨을 사용중인 Deployment list 조회
-     *
-     * @param volumeMetaName
-     * @param client
-     * @return
-     */
-    private static List<Deployment> getDeploymentsInUseVolume(String volumeMetaName, KubernetesClient client) {
-        return client.apps().deployments().withLabelIn(volumeMetaName, "true")
-                .list()
-                .getItems();
-    }
-
-    /**
-     * 해당 볼륨을 사용중인 StatefulSet list 조회
-     *
-     * @param volumeMetaName
-     * @param client
-     * @return
-     */
-    private static List<StatefulSet> getStatefulSetsInUseVolume(String volumeMetaName, KubernetesClient client) {
-        return client
-                .apps()
-                .statefulSets()
-                .withLabelIn(volumeMetaName, "true")
-                .list()
-                .getItems();
-    }
-
-    /**
-     * 자신이 생성한 볼륨이 맞는지 체크
-     *
-     * @param workspaceMetaName
-     * @param volumeMetaName
-     * @param client
-     * @param creator
-     */
-    private static boolean volumeCreatorCheck(String workspaceMetaName, String volumeMetaName, KubernetesClient client,
-                                              String creator) {
-        PersistentVolumeClaim persistentVolumeClaim = client.persistentVolumeClaims()
-                .inNamespace(workspaceMetaName)
-                .withName(volumeMetaName).get();
-        if (persistentVolumeClaim == null) {
-            throw new RuntimeException("볼륨이 존재하지 않습니다.");
-        }
-        String labelCreator = persistentVolumeClaim.getMetadata().getLabels().get(LabelField.CREATOR.getField());
-
-        return labelCreator.equals(creator) ? true : false;
-    }
+	/**
+	 * 볼륨 전체 리스트 조회
+	 *
+	 * @param client
+	 * @return
+	 */
+	private static List<PersistentVolumeClaim> getAllVolumes(KubernetesClient client) {
+		return client.persistentVolumeClaims()
+			.inAnyNamespace()
+			.withLabel(LabelField.CONTROL_BY.getField(), "astra")
+			.list()
+			.getItems();
+	}
 
 	@Override
 	public String createVolume(CreateVolumeDTO createVolumeDTO) {
@@ -200,8 +84,236 @@ public class VolumeRepositoryImpl implements VolumeRepository {
 		}
 	}
 
+	private static PersistentVolumeClaim findPVCByMetaName(String volumeMetaName,
+		List<PersistentVolumeClaim> pvcs) {
+		return pvcs.stream()
+			.filter(pvc -> pvc.getMetadata().getName().equals(volumeMetaName))
+			.findFirst()
+			.orElseThrow(() -> new RuntimeException("볼륨이 존재하지 않습니다."));
+	}
+
+	private static String getStorageSavePath(KubernetesClient client, String storageName) {
+		return client.storage().v1().storageClasses().withName(storageName).get().getParameters().get("share");
+	}
+
+	private static String getStorageClassName(PersistentVolumeClaim persistentVolumeClaim) {
+		return persistentVolumeClaim.getSpec().getStorageClassName();
+	}
+
+	private static StorageType getStorageType(PersistentVolumeClaim persistentVolumeClaim) {
+		return StorageType.valueOf(
+			persistentVolumeClaim.getMetadata().getLabels().get(LabelField.STORAGE_TYPE.getField()));
+	}
+
+	private static String getRequestVolume(PersistentVolumeClaim persistentVolumeClaim) {
+		return persistentVolumeClaim.getSpec().getResources().getRequests().get("storage").toString();
+	}
+
+	private static String getNamespace(PersistentVolumeClaim persistentVolumeClaim) {
+		return persistentVolumeClaim.getMetadata().getNamespace();
+	}
+
 	@Override
-	public List<VolumeResDTO> findVolumesByWorkspaceMetaNameAndStorageMetaName(String workspaceMetaName, String storageMetaName) {
+	public void deleteVolumeByMetaName(String volumeMetaName) {
+		try (final KubernetesClient client = k8sAdapter.configServer()) {
+
+			//삭제 전 사용중인지 확인해야함
+			checkAndThrowIfInUse(() -> getDeploymentsInUseVolume(volumeMetaName, client));
+			checkAndThrowIfInUse(() -> getStatefulSetsInUseVolume(volumeMetaName, client));
+			checkAndThrowIfInUse(() -> getJobsInUseVolume(volumeMetaName, client));
+
+			//삭제
+			PersistentVolumeClaim pvc = client.persistentVolumeClaims()
+				.inAnyNamespace()
+				.withLabel(LabelField.CONTROL_BY.getField(), "astra")
+				.list()
+				.getItems()
+				.stream()
+				.filter(persistentVolumeClaim -> persistentVolumeClaim.getMetadata().getName().equals(volumeMetaName))
+				.findFirst()
+				.orElseThrow(() -> new RuntimeException("볼륨이 존재하지 않습니다."));
+
+			client.persistentVolumeClaims().resource(pvc).delete();
+		}
+	}
+
+	@Override
+	public void modifyVolume(ModifyVolumeDTO modifyVolumeDTO) {
+		try (final KubernetesClient client = k8sAdapter.configServer()) {
+			Resource<PersistentVolumeClaim> persistentVolumeClaimResource = client.persistentVolumeClaims()
+				.inAnyNamespace()
+				.withLabel(LabelField.CONTROL_BY.getField(), "astra")
+				.resources()
+				.filter(pvcr -> pvcr.get().getMetadata().getName().equals(modifyVolumeDTO.getVolumeMetaName()))
+				.findFirst()
+				.orElseThrow(() -> new RuntimeException("볼륨이 존재하지 않습니다."));
+
+			persistentVolumeClaimResource.edit(pvc -> new PersistentVolumeClaimBuilder(pvc).editMetadata()
+				.addToAnnotations(AnnotationField.NAME.getField(), modifyVolumeDTO.getName())
+				.endMetadata()
+				.build());
+		}
+	}
+
+	/**
+	 * 아스트라를 통해 만들어진 PVC가 맞는지 체크
+	 * @param pvc
+	 * @return
+	 */
+	private static boolean isVolumePVC(PersistentVolumeClaim pvc) {
+		return pvc.getMetadata().getName().contains(ResourceType.VOLUME.getName());
+	}
+
+	/**
+	 * pageVolumeResDTO 생성 메서드
+	 * @param client
+	 * @param pvc
+	 * @return
+	 */
+	private PageVolumeResDTO createPageVolumeResDTO(KubernetesClient client, PersistentVolumeClaim pvc) {
+		String volumeName = pvc.getMetadata().getName();
+		boolean isUsed = checkUsedVolume(volumeName, client);
+
+		String namespace = getNamespace(pvc);
+		String workspaceName = getWorkspaceNameByMetaName(client, namespace);
+
+		PageVolumeResDTO pageVolumeResDTO = PageVolumeResDTO.toDTO(pvc);
+		pageVolumeResDTO.setIsUsed(isUsed);
+		pageVolumeResDTO.setWorkspaceName(workspaceName);
+		return pageVolumeResDTO;
+	}
+
+	/**
+	 * 워크스페이스 메타 이름으로 워크스페이스 사용자가 설정한 이름 조회
+	 * @param client
+	 * @param namespace
+	 * @return
+	 */
+	private static String getWorkspaceNameByMetaName(KubernetesClient client, String namespace) {
+		return client.namespaces()
+			.withName(namespace)
+			.get()
+			.getMetadata()
+			.getAnnotations()
+			.get(AnnotationField.NAME.getField());
+	}
+
+	/**
+	 * 해당 볼륨을 사용중인 job list 조회
+	 * @param volumeMetaName
+	 * @param client
+	 * @return
+	 */
+	private static List<Job> getJobsInUseVolume(String volumeMetaName, KubernetesClient client) {
+		return client.batch().v1().jobs().withLabelIn(volumeMetaName, "true")
+			.list()
+			.getItems();
+	}
+
+	/**
+	 * 해당 볼륨을 사용중인 Deployment list 조회
+	 * @param volumeMetaName
+	 * @param client
+	 * @return
+	 */
+	private static List<Deployment> getDeploymentsInUseVolume(String volumeMetaName, KubernetesClient client) {
+		return client.apps().deployments().withLabelIn(volumeMetaName, "true")
+			.list()
+			.getItems();
+	}
+
+	/**
+	 * 해당 볼륨을 사용중인 StatefulSet list 조회
+	 * @param volumeMetaName
+	 * @param client
+	 * @return
+	 */
+	private static List<StatefulSet> getStatefulSetsInUseVolume(String volumeMetaName, KubernetesClient client) {
+		return client
+			.apps()
+			.statefulSets()
+			.withLabelIn(volumeMetaName, "true")
+			.list()
+			.getItems();
+	}
+
+	/**
+	 * 자신이 생성한 볼륨이 맞는지 체크
+	 * @param workspaceMetaName
+	 * @param volumeMetaName
+	 * @param client
+	 * @param creator
+	 */
+	private static boolean volumeCreatorCheck(String workspaceMetaName, String volumeMetaName, KubernetesClient client,
+		String creator) {
+		PersistentVolumeClaim persistentVolumeClaim = client.persistentVolumeClaims()
+			.inNamespace(workspaceMetaName)
+			.withName(volumeMetaName).get();
+		if (persistentVolumeClaim == null) {
+			throw new RuntimeException("볼륨이 존재하지 않습니다.");
+		}
+		String labelCreator = persistentVolumeClaim.getMetadata().getLabels().get(LabelField.CREATOR.getField());
+
+		return labelCreator.equals(creator) ? true : false;
+	}
+
+	@Override
+	public void modifyVolumeByMetaName(ModifyVolumeDTO modifyVolumeDTO) {
+		try (final KubernetesClient client = k8sAdapter.configServer()) {
+			//본인이 생성한 볼륨인지 체크
+			String creator = modifyVolumeDTO.getCreator();
+			boolean chk = volumeCreatorCheck(modifyVolumeDTO.getWorkspaceMetaName(),
+				modifyVolumeDTO.getVolumeMetaName(), client, creator);
+			if (!chk) {
+				throw new RuntimeException("자신이 생성한 볼륨만 수정할 수 있습니다.");
+			}
+			Resource<PersistentVolumeClaim> persistentVolumeClaimResource = client.persistentVolumeClaims()
+				.inNamespace(modifyVolumeDTO.getWorkspaceMetaName())
+				.withName(modifyVolumeDTO.getVolumeMetaName());
+
+			if (persistentVolumeClaimResource.get() == null || !isControlledByAstra(
+				persistentVolumeClaimResource.get().getMetadata().getLabels())) {
+				throw new RuntimeException("볼륨이 존재하지 않습니다.");
+			}
+			persistentVolumeClaimResource
+				.edit(pvc -> new PersistentVolumeClaimBuilder(pvc).editMetadata()
+					.addToAnnotations(AnnotationField.NAME.getField(), modifyVolumeDTO.getName())
+					.endMetadata()
+					.build());
+		}
+	}
+
+	@Override
+	public void deleteVolumeByWorkspaceMetaNameAndVolumeMetaName(DeleteVolumeDTO deleteVolumeDTO) {
+		try (final KubernetesClient client = k8sAdapter.configServer()) {
+			//본인이 생성한 볼륨인지 체크
+			String creator = deleteVolumeDTO.getCreator();
+			boolean chk = volumeCreatorCheck(deleteVolumeDTO.getWorkspaceMetaName(),
+				deleteVolumeDTO.getVolumeMetaName(), client, creator);
+			if (!chk)
+				throw new RuntimeException("자신이 생성한 볼륨만 삭제할 수 있습니다.");
+
+			//삭제 전 사용중인지 확인해야함
+			String volumeMetaName = deleteVolumeDTO.getVolumeMetaName();
+			checkAndThrowIfInUse(() -> getDeploymentsInUseVolume(volumeMetaName, client));
+			checkAndThrowIfInUse(() -> getStatefulSetsInUseVolume(volumeMetaName, client));
+			checkAndThrowIfInUse(() -> getJobsInUseVolume(volumeMetaName, client));
+
+			//삭제
+			Resource<PersistentVolumeClaim> persistentVolumeClaimResource = client.persistentVolumeClaims()
+				.inNamespace(deleteVolumeDTO.getWorkspaceMetaName())
+				.withName(deleteVolumeDTO.getVolumeMetaName());
+			if (persistentVolumeClaimResource.get() == null || !isControlledByAstra(
+				persistentVolumeClaimResource.get().getMetadata().getLabels())) {
+				throw new RuntimeException("볼륨이 존재하지 않습니다.");
+			}
+			persistentVolumeClaimResource.delete();
+		}
+	}
+
+	@Override
+	public List<VolumeResDTO> findVolumesByWorkspaceMetaNameAndStorageMetaName(String workspaceMetaName,
+		String storageMetaName) {
 		try (final KubernetesClient client = k8sAdapter.configServer()) {
 			List<PersistentVolumeClaim> pvcs = client.persistentVolumeClaims()
 				.inNamespace(workspaceMetaName)
@@ -209,7 +321,19 @@ public class VolumeRepositoryImpl implements VolumeRepository {
 				.withLabel(LabelField.CONTROL_BY.getField(), "astra")
 				.list()
 				.getItems();
-			return pvcs.stream().map(VolumeResDTO::toDTO).collect(Collectors.toList());
+			return pvcs.stream().map(VolumeResDTO::toDTO).toList();
+		}
+	}
+
+	@Override
+	public List<PageVolumeResDTO> findVolumes(String option, String keyword) {
+		try (final KubernetesClient client = k8sAdapter.configServer()) {
+			List<PersistentVolumeClaim> pvcs = getAllVolumes(client);
+
+			return pvcs.stream()
+				.filter(pvc -> isVolumePVC(pvc))
+				.filter(pvc -> matchesSearchOption(pvc, option, keyword))
+				.map(pvc -> createPageVolumeResDTO(client, pvc)).toList();
 		}
 	}
 
@@ -257,58 +381,6 @@ public class VolumeRepositoryImpl implements VolumeRepository {
 	}
 
 	@Override
-	public void modifyVolumeByMetaName(ModifyVolumeDTO modifyVolumeDTO) {
-		try (final KubernetesClient client = k8sAdapter.configServer()) {
-			//본인이 생성한 볼륨인지 체크
-			String creator = modifyVolumeDTO.getCreator();
-			boolean chk = volumeCreatorCheck(modifyVolumeDTO.getWorkspaceMetaName(),
-				modifyVolumeDTO.getVolumeMetaName(), client, creator);
-			if (!chk) {
-				throw new RuntimeException("자신이 생성한 볼륨만 수정할 수 있습니다.");
-			}
-			Resource<PersistentVolumeClaim> persistentVolumeClaimResource = client.persistentVolumeClaims()
-				.inNamespace(modifyVolumeDTO.getWorkspaceMetaName())
-				.withName(modifyVolumeDTO.getVolumeMetaName());
-
-			if(persistentVolumeClaimResource.get() == null || !isControlledByAstra(persistentVolumeClaimResource.get().getMetadata().getLabels())){
-				throw new RuntimeException("볼륨이 존재하지 않습니다.");
-			}
-			persistentVolumeClaimResource
-				.edit(pvc -> new PersistentVolumeClaimBuilder(pvc).editMetadata()
-					.addToAnnotations(AnnotationField.NAME.getField(), modifyVolumeDTO.getName())
-					.endMetadata()
-					.build());
-		}
-	}
-
-	@Override
-	public void deleteVolumeByWorkspaceMetaNameAndVolumeMetaName(DeleteVolumeDTO deleteVolumeDTO) {
-		try (final KubernetesClient client = k8sAdapter.configServer()) {
-			//본인이 생성한 볼륨인지 체크
-			String creator = deleteVolumeDTO.getCreator();
-			boolean chk = volumeCreatorCheck(deleteVolumeDTO.getWorkspaceMetaName(),
-				deleteVolumeDTO.getVolumeMetaName(), client, creator);
-			if (!chk)
-				throw new RuntimeException("자신이 생성한 볼륨만 삭제할 수 있습니다.");
-
-			//삭제 전 사용중인지 확인해야함
-			String volumeMetaName = deleteVolumeDTO.getVolumeMetaName();
-			checkAndThrowIfInUse(() -> getDeploymentsInUseVolume(volumeMetaName, client));
-			checkAndThrowIfInUse(() -> getStatefulSetsInUseVolume(volumeMetaName, client));
-			checkAndThrowIfInUse(() -> getJobsInUseVolume(volumeMetaName, client));
-
-			//삭제
-			Resource<PersistentVolumeClaim> persistentVolumeClaimResource = client.persistentVolumeClaims()
-				.inNamespace(deleteVolumeDTO.getWorkspaceMetaName())
-				.withName(deleteVolumeDTO.getVolumeMetaName());
-			if(persistentVolumeClaimResource.get() == null || !isControlledByAstra(persistentVolumeClaimResource.get().getMetadata().getLabels())){
-				throw new RuntimeException("볼륨이 존재하지 않습니다.");
-			}
-			persistentVolumeClaimResource.delete();
-		}
-	}
-
-	@Override
 	public List<PageVolumeResDTO> findVolumesWithPagination(String workspaceMetaName, String option, String keyword) {
 		try (final KubernetesClient client = k8sAdapter.configServer()) {
 			List<PersistentVolumeClaim> pvcs = client.persistentVolumeClaims()
@@ -329,123 +401,6 @@ public class VolumeRepositoryImpl implements VolumeRepository {
 				// .sorted(Comparator.comparing(PageVolumeResDTO::getCreatedAt).reversed())
 				.collect(Collectors.toList());
 		}
-	}
-
-	@Override
-	public List<PageVolumeResDTO> findVolumes(String option, String keyword) {
-		try (final KubernetesClient client = k8sAdapter.configServer()) {
-			List<PersistentVolumeClaim> pvcs = getAllVolumes(client);
-
-			return pvcs.stream()
-				.filter(pvc -> isVolumePVC(pvc))
-				.filter(pvc -> matchesSearchOption(pvc, option, keyword))
-				.map(pvc -> createPageVolumeResDTO(client, pvc))
-				.collect(Collectors.toList());
-		}
-	}
-
-	@Override
-	public VolumeWithStorageResDTO findVolumeByMetaName(String volumeMetaName) {
-		try (final KubernetesClient client = k8sAdapter.configServer()) {
-			List<String> workloadNames = new ArrayList<>();
-			List<PersistentVolumeClaim> pvcs = getAllVolumes(client);
-			PersistentVolumeClaim persistentVolumeClaim = findPVCByMetaName(volumeMetaName, pvcs);
-
-			String namespace = getNamespace(persistentVolumeClaim);
-			String workspaceName = getWorkspaceNameByMetaName(client, namespace);
-
-			String requestVolume = getRequestVolume(persistentVolumeClaim);
-			StorageType storageType = getStorageType(persistentVolumeClaim);
-
-			//사용중인 statefulSets 조회
-			List<StatefulSet> statefulSets = getStatefulSetsInUseVolume(volumeMetaName, client);
-			setWorkloadInUseVolume(statefulSets, workloadNames);
-			//사용중인 deployment 조회
-			List<Deployment> deployments = getDeploymentsInUseVolume(volumeMetaName, client);
-			setWorkloadInUseVolume(deployments, workloadNames);
-			//사용중인 job 조회
-			List<Job> jobs = getJobsInUseVolume(volumeMetaName, client);
-			setWorkloadInUseVolume(jobs, workloadNames);
-			String storageMetaName = getStorageClassName(persistentVolumeClaim);
-			String storageSavePath = getStorageSavePath(client, storageMetaName);
-			String storageName = getStorageClassName(client, storageMetaName);
-			return VolumeWithStorageResDTO.builder()
-				.hasMetadata(persistentVolumeClaim)
-				.workspaceName(workspaceName)
-				.requestVolume(requestVolume)
-				.storageType(storageType)
-				.storageClassName(storageName)
-				.workloadNames(workloadNames)
-				.savePath(storageSavePath)
-				.build();
-		} catch (NullPointerException e) {
-			log.error("volume not found {}", e.getMessage(), e);
-			throw e;
-		} catch (Exception e) {
-			log.error("k8s cluster connect error {}", e.getMessage(), e);
-			throw e;
-		}
-	}
-
-	@Override
-	public void deleteVolumeByMetaName(String volumeMetaName) {
-		try (final KubernetesClient client = k8sAdapter.configServer()) {
-
-			//삭제 전 사용중인지 확인해야함
-			checkAndThrowIfInUse(() -> getDeploymentsInUseVolume(volumeMetaName, client));
-			checkAndThrowIfInUse(() -> getStatefulSetsInUseVolume(volumeMetaName, client));
-			checkAndThrowIfInUse(() -> getJobsInUseVolume(volumeMetaName, client));
-
-			//삭제
-			PersistentVolumeClaim pvc = client.persistentVolumeClaims()
-				.inAnyNamespace()
-				.withLabel(LabelField.CONTROL_BY.getField(), "astra")
-				.list()
-				.getItems()
-				.stream()
-				.filter(persistentVolumeClaim -> persistentVolumeClaim.getMetadata().getName().equals(volumeMetaName))
-				.findFirst()
-				.orElseThrow(() -> new RuntimeException("볼륨이 존재하지 않습니다."));
-
-			client.persistentVolumeClaims().resource(pvc).delete();
-		}
-	}
-
-	@Override
-	public void modifyVolume(ModifyVolumeDTO modifyVolumeDTO) {
-		try (final KubernetesClient client = k8sAdapter.configServer()) {
-			Resource<PersistentVolumeClaim> persistentVolumeClaimResource = client.persistentVolumeClaims()
-				.inAnyNamespace()
-				.withLabel(LabelField.CONTROL_BY.getField(), "astra")
-				.resources()
-				.filter(pvcr -> pvcr.get().getMetadata().getName().equals(modifyVolumeDTO.getVolumeMetaName()))
-				.findFirst()
-				.orElseThrow(() -> new RuntimeException("볼륨이 존재하지 않습니다."));
-
-			persistentVolumeClaimResource.edit(pvc -> new PersistentVolumeClaimBuilder(pvc).editMetadata()
-				.addToAnnotations(AnnotationField.NAME.getField(), modifyVolumeDTO.getName())
-				.endMetadata()
-				.build());
-		}
-	}
-
-	/**
-	 * pageVolumeResDTO 생성 메서드
-	 * @param client
-	 * @param pvc
-	 * @return
-	 */
-	private PageVolumeResDTO createPageVolumeResDTO(KubernetesClient client, PersistentVolumeClaim pvc) {
-		String volumeName = pvc.getMetadata().getName();
-		boolean isUsed = checkUsedVolume(volumeName, client);
-
-		String namespace = getNamespace(pvc);
-		String workspaceName = getWorkspaceNameByMetaName(client, namespace);
-
-		PageVolumeResDTO pageVolumeResDTO = PageVolumeResDTO.toDTO(pvc);
-		pageVolumeResDTO.setIsUsed(isUsed);
-		pageVolumeResDTO.setWorkspaceName(workspaceName);
-		return pageVolumeResDTO;
 	}
 
 	/**
@@ -489,6 +444,49 @@ public class VolumeRepositoryImpl implements VolumeRepository {
 		List<Deployment> deploymentsInUseVolume = getDeploymentsInUseVolume(volumeMetaName, client);
 		List<StatefulSet> statefulSetsInUseVolume = getStatefulSetsInUseVolume(volumeMetaName, client);
 		return !jobsInUseVolume.isEmpty() || !deploymentsInUseVolume.isEmpty() || !statefulSetsInUseVolume.isEmpty();
+	}
+
+	@Override
+	public VolumeWithStorageResDTO findVolumeByMetaName(String volumeMetaName) {
+		try (final KubernetesClient client = k8sAdapter.configServer()) {
+			List<String> workloadNames = new ArrayList<>();
+			List<PersistentVolumeClaim> pvcs = getAllVolumes(client);
+			PersistentVolumeClaim persistentVolumeClaim = findPVCByMetaName(volumeMetaName, pvcs);
+
+			String namespace = getNamespace(persistentVolumeClaim);
+			String workspaceName = getWorkspaceNameByMetaName(client, namespace);
+
+			String requestVolume = getRequestVolume(persistentVolumeClaim);
+			StorageType storageType = getStorageType(persistentVolumeClaim);
+
+			//사용중인 statefulSets 조회
+			List<StatefulSet> statefulSets = getStatefulSetsInUseVolume(volumeMetaName, client);
+			setWorkloadInUseVolume(statefulSets, workloadNames);
+			//사용중인 deployment 조회
+			List<Deployment> deployments = getDeploymentsInUseVolume(volumeMetaName, client);
+			setWorkloadInUseVolume(deployments, workloadNames);
+			//사용중인 job 조회
+			List<Job> jobs = getJobsInUseVolume(volumeMetaName, client);
+			setWorkloadInUseVolume(jobs, workloadNames);
+			String storageMetaName = getStorageClassName(persistentVolumeClaim);
+			String storageSavePath = getStorageSavePath(client, storageMetaName);
+			String storageName = getStorageClassName(client, storageMetaName);
+			return VolumeWithStorageResDTO.builder()
+				.hasMetadata(persistentVolumeClaim)
+				.workspaceName(workspaceName)
+				.requestVolume(requestVolume)
+				.storageType(storageType)
+				.storageClassName(storageName)
+				.workloadNames(workloadNames)
+				.savePath(storageSavePath)
+				.build();
+		} catch (NullPointerException e) {
+			log.error("volume not found {}", e.getMessage(), e);
+			throw e;
+		} catch (Exception e) {
+			log.error("k8s cluster connect error {}", e.getMessage(), e);
+			throw e;
+		}
 	}
 
 	/**
